# python-erp

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  cli.py
adapters/desktop/: __init__.py  app.py  main_window.py  sample_seed.py  service.py  smoke.py
adapters/desktop/pages/: __init__.py  invoice_page.py
adapters/desktop/widgets/: __init__.py  autocomplete.py
docs/: CONTRACT_A4_CUSTOMER_NUMBERING.md  CONTRACT_A5_RENDER_ONLY_NUMBERING.md  CONTRACT_A6_LIFECYCLE_NUMBERING.md  PYTHON_ERP_INV0_PLAN.md  PYTHON_ERP_INVOICE_ARCHITECTURE_v1.md
examples/: invoice_demo.py
modules/invoice/: module.json
src/erp_data/: __init__.py  assembly.py
src/erp_data/db/: __init__.py  base.py  init_db.py  models.py  session.py
src/erp_data/imports/: __init__.py  importer.py  templates.py
src/erp_data/registry/: __init__.py  loader.py
src/erp_data/repositories/: __init__.py  lookups.py  permissions.py
src/erp_engine/: __init__.py
src/erp_engine/core/: __init__.py  data_loader.py
src/erp_engine/modules/: __init__.py
src/erp_engine/modules/proforma/: __init__.py  engine.py  rules.py  schema.py
tests/: conftest.py
tests/integration/: conftest.py  test_invoice_flow.py  test_service.py
tests/unit/erp_data/: conftest.py  test_db_init.py  test_import.py  test_permissions.py  test_registry.py  test_templates.py
tests/unit/modules/proforma/: test_engine.py
