[project]
name = "erp-engine"
version = "0.1.0"
description = "Deterministic ERP execution engine — Excel-friendly, AI-optional"
authors = [{name = "AgentAI Team"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Excel read/write (data files, templates)
    "openpyxl>=3.1",
    # Schema validation (input/output contracts)
    "pydantic>=2.5",
    # HTML preview rendering — allowed but not mandatory for sprint 1.
    # First implementation may emit JSON only; jinja2 lands as a real
    # dependency the moment a template is actually rendered.
    "jinja2>=3.1",
    # Data layer (erp_data): ORM over SQLite (desktop) / Postgres/MySQL (later).
    "sqlalchemy>=2.0",
    # Desktop UI (adapters/desktop).
    "pyside6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
# Allows `erp-engine --module proforma < input.json > output.json`
# after `uv pip install -e .`
erp-engine = "adapters.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_engine", "src/erp_data", "adapters"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/erp_engine", "src/erp_data", "adapters"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
